--- a/config.json
+++ b/config.json
@@ -1,76 +1,7 @@
 {
-  "version": "1.0.0",
-  "network": "chainlink-don-testnet",
-  "consensus": {
-    "minimumNodes": 4,
-    "bftThreshold": 0.67,
-    "aggregationMethod": "median",
-    "maxVariancePercent": 2.0
-  },
-  "dataSources": {
-    "gold": {
-      "provider": "alphavantage",
-      "endpoints": [
-        {
-          "url": "https://www.alphavantage.co/query",
-          "params": {
-            "function": "GLOBAL_QUOTE",
-            "symbol": "GLD",
-            "apikey": "${ALPHA_VANTAGE_API_KEY}"
-          },
-          "weight": 1.0
-        },
-        {
-          "url": "https://www.alphavantage.co/query",
-          "params": {
-            "function": "CURRENCY_EXCHANGE_RATE",
-            "from_currency": "XAU",
-            "to_currency": "USD",
-            "apikey": "${ALPHA_VANTAGE_API_KEY}"
-          },
-          "weight": 0.8
-        }
-      ],
-      "refreshIntervalSeconds": 300,
-      "staleThresholdSeconds": 600
-    },
-    "msft": {
-      "provider": "alphavantage",
-      "endpoints": [
-        {
-          "url": "https://www.alphavantage.co/query",
-          "params": {
-            "function": "GLOBAL_QUOTE",
-            "symbol": "MSFT",
-            "apikey": "${ALPHA_VANTAGE_API_KEY}"
-          },
-          "weight": 1.0
-        },
-        {
-          "url": "https://www.alphavantage.co/query",
-          "params": {
-            "function": "TIME_SERIES_INTRADAY",
-            "symbol": "MSFT",
-            "interval": "5min",
-            "apikey": "${ALPHA_VANTAGE_API_KEY}"
-          },
-          "weight": 0.9
-        }
-      ],
-      "refreshIntervalSeconds": 60,
-      "staleThresholdSeconds": 180
-    }
-  },
-  "riskParameters": {
-    "highVolatilityThreshold": 2.0,
-    "extremeVolatilityThreshold": 5.0,
-    "circuitBreakerEnabled": true,
-    "maxPriceDeviationPercent": 10.0
-  },
-  "performance": {
-    "timeout": 30000,
-    "maxRetries": 3,
-    "cacheEnabled": true,
-    "cacheTTLSeconds": 60
-  }
+  "vaultAddress": "0x82aF49447D8a07e3bd95BD0d56f35241523fBab1",
+  "vixAPIEndpoint": "https://api.cboe.com/vix/latest",
+  "aiEndpoint": "https://api.openai.com/v1/chat/completions",
+  "riskThreshold": 0.80,
+  "minRebalanceDelay": 3600
 }
